--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "webpack-stream": "^3.2.0"
   },
   "scripts": {
-    "test": "npm test"
+    "test": "npm test",
+    "start":"gulp"
   },
   "repository": {
     "type": "git",
